//指定proto3格式
syntax = "proto3";
import public "timestamp.proto";
option java_multiple_files = true;//以外部类模式生成
option java_package = "com.ylpu.thales.scheduler.core.rpc.entity";//所在包名
option java_outer_classname = "WorkerGrpc";//最外层类名称

message WorkerRequestRpc{
    int32 id = 1;
    int32 workerType = 2;
    string host = 3;
    int32 port = 4;
    string workerGroup = 5;
    string zkdirectory = 6;
    double cpuUsage = 7;
    double memoryUsage = 8;
    google.protobuf.Timestamp lastHeartbeatTime = 9;
    int32 workerStatus = 10;
}

message WorkerParameter{
    string hostname = 1;
    int32 port = 2;
}
message WorkerResponseRpc{
    int32 id = 1;
    int32 errorCode = 2;
    string errorMsg = 3;
    bytes data = 4;
}

message JobStatusRequestRpc{
    string requestId = 1;
    int32 taskState = 2;
    bytes data = 3;
}

service GrpcWorkerService{
    rpc incTask(WorkerParameter) returns(WorkerResponseRpc);
    rpc decTask(WorkerParameter) returns(WorkerResponseRpc);
    rpc updateResource(WorkerRequestRpc) returns(WorkerResponseRpc);
    rpc insertOrUpdateGroup(WorkerRequestRpc) returns(WorkerResponseRpc);
    rpc updateJobStatus(JobStatusRequestRpc) returns(WorkerResponseRpc);
}